--- a/.github/workflows/build_ci.yaml
+++ b/.github/workflows/build_ci.yaml
@@ -14,4 +14,5 @@ jobs:
       - name: Archive artifacts
         uses: actions/upload-artifact@v2
         with:
-          path: dists
+          name: hex
+          path: ./dists
